Fix broken links in documentation

--- a/docs/book/src/04_developer/01_version_migration/00.md
+++ b/docs/book/src/04_developer/01_version_migration/00.md
@@ -2,4 +2,4 @@
 
 This section provides an overview of relevant changes between versions of Cluster API Operator and their direct successors.
 
-- [v1alpha1 to v1alpha2](./01_v1alpha1-to-v1alpha2.md)
+- [v1alpha1 to v1alpha2](v1alpha1-to-v1alpha2.md)
