--- a/docs/book/src/05_reference/00.md
+++ b/docs/book/src/05_reference/00.md
@@ -1,8 +1,8 @@
 # Reference
 
-- [API reference](./01_api_reference.md)
-- [Glossary](./02_glossary.md)
-- [Code of Conduct](./03_code-of-conduct.md)
-- [Contributing](./04_contributing.md)
-- [CI Jobs](./05_ci-jobs.md)
-- [Providers](./06_providers.md)
+- [API reference](api_reference.md)
+- [Glossary](glossary.md)
+- [Code of Conduct](code-of-conduct.md)
+- [Contributing](contributing.md)
+- [CI Jobs](ci-jobs.md)
+- [Providers](providers.md)
